@@ -1,5 +1,5 @@
 //
-// "$Id: fl_font_mac.cxx,v 1.1.2.9 2002/06/27 04:29:39 matthiaswm Exp $"
+// "$Id: fl_font_mac.cxx,v 1.1.2.10 2002/06/27 23:18:12 matthiaswm Exp $"
 //
 // MacOS font selection routines for the Fast Light Tool Kit (FLTK).
 //
@@ -27,6 +27,7 @@
 //: TextSize, TextFont
 //: GetFNum (theName: Str255; VAR familyID: Integer);
 //: FUNCTION FMSwapFont (inRec: FMInput): FMOutPtr;
+//: SetFractEnable
 
 Fl_FontSize::Fl_FontSize(const char* name, int Size) {
   knowMetrics = 0;
@@ -126,13 +127,7 @@ static Fl_FontSize* find(int fnum, int size) {
 ////////////////////////////////////////////////////////////////
 // Public interface:
 
-int fl_font_ = 0;
-int fl_size_ = 0;
-
 void fl_font(int fnum, int size) {
-  if (fnum == fl_font_ && size == fl_size_) return;
-  fl_font_ = fnum;
-  fl_size_ = size;
   fl_font(find(fnum, size));
 }
 
@@ -159,5 +154,5 @@ void fl_draw(const char* str, int n, int x, int y) {
 }
 
 //
-// End of "$Id: fl_font_mac.cxx,v 1.1.2.9 2002/06/27 04:29:39 matthiaswm Exp $".
+// End of "$Id: fl_font_mac.cxx,v 1.1.2.10 2002/06/27 23:18:12 matthiaswm Exp $".
 //
